--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 60px;
   color: #fff;
 }
 
@@ -159,7 +159,7 @@ footer p {
   form{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   form label, form select, form input{
@@ -170,14 +170,14 @@ footer p {
   }
 
   form button{
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .stay-form{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 20%;
+    width: 19%;
 
   }
 
